# eds-cv-lib

./: .gitignore  README.md  license
.github/workflows/: blank.yml  default.yml
doc/: .gitignore
doc/00000_template/: 00000_template_doc.fodt
doc/00001-00100/: .gitignore  00001_the_project_eds_cv_lib.fodt  00002_code_readiness_level_doc.fodt  00003_image_representation.fodt  00004_organisation.fodt  00005_tests_images.fodt  00006_other_image_proc_library.fodt  00007_meson_or_cmake.fodt
images/testimages.org/: .gitignore  license.txt  readme.txt
images/testimages.org/SAMPLING/8BIT/RGB/: .gitignore
images/testimages.org/SAMPLING/8BIT/RGB/2448x2448/SRC/: .gitignore
lib_build/: readme.txt
lib_src/: .gitignore  CMakeLists.txt  Cargo.toml  build_lib_src.py  meson.build  tst_lib_test_suite.py
lib_src/common/: ecv_errcode.h  ecv_error.h
lib_src/file_io/: meson.build
lib_src/file_io/png/: ecv_png_load_header.rs  meson.build
lib_src/file_io/png/example_in_c/: ecv_png_load_header_ex_1.c  meson.build
lib_src/file_io/png/tests/: tst_png_load_header.py
lib_src/img_op/: CMakeLists.txt  meson.build
lib_src/img_op/morphology/: CMakeLists.txt
lib_src/img_op/morphology/dilate/: CMakeLists.txt  ecv_dilate_3x3_u16.c  ecv_dilate_3x3_u8.c
lib_src/img_op/morphology/dilate/tests/: tst_dilate_3x3_u8.py
staging/eds/: .gitignore  EDS-CV-Lib build.py.launch  build.py  build_staging_eds.py  meson.build
staging/eds/op_morpho/: .gitignore  Cargo.toml  ecv_op_morpho.rs  meson.build
staging/eds/op_morpho/tests/: tst_op_morpho.py
staging/eds/tools/: note.txt
template/: .gitignore  ecv_template.c  ecv_template.h  ecv_template.py  ecv_template.rs  eds_template.py  meson.build
template/tests/: tst_template.py
tools/: load_img.html
tools/eclipse_conf/: EDS-CV-Lib build_lib_src.py.launch  ecv_c_styles_settings.xml
tools/edsimgviewer/: edsimgviewer.py  load_img.html
tools/edsimgviewer/tests/: tst_edsimgviewer.py
